--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-# Compiled source #
-###################
+# IDE-specific files #
+######################
+.externalToolBuilders
+.idea
+nb-configuration.xml
+*.orig
+.springBeans
+*.iml
+*.ipr
+*.iws
+*.ids
+*.swp
+.pmd
+.checkstyle
+maven-eclipse.xml
+
+# Compiled sources #
+######################
 *.com
 *.class
 *.dll
@@ -9,7 +25,7 @@
 *.pyc
 
 # Packages #
-############
+######################
 # it's better to unpack these files and commit the raw source
 # git has its own built in compression methods
 *.7z
@@ -24,6 +40,7 @@
 # Logs #
 ######################
 *.log
+*.log.zip
 
 # OS generated files #
 ######################
@@ -31,3 +48,18 @@
 ehthumbs.db
 Icon?
 Thumbs.db
+
+# Folders #
+######################
+target
+log
+lib
+
+# Other #
+######################
+.classpath
+.project
+.settings
+.metadata
+HREV*
+*.FDC
